; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_event.c_adns_firsttimeout.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_event.c_adns_firsttimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32 }

@cc_entex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @adns_firsttimeout(i32 %0, %struct.timeval** %1, %struct.timeval* %2, i32 %3) #0 {
  %5 = alloca %struct.timeval, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.timeval**, align 8
  %8 = alloca %struct.timeval*, align 8
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  store i32 %3, i32* %9, align 4
  store i32 %0, i32* %6, align 4
  store %struct.timeval** %1, %struct.timeval*** %7, align 8
  store %struct.timeval* %2, %struct.timeval** %8, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @cc_entex, align 4
  %12 = call i32 @adns__consistency(i32 %10, i32 0, i32 %11)
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.timeval**, %struct.timeval*** %7, align 8
  %15 = load %struct.timeval*, %struct.timeval** %8, align 8
  %16 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @adns__timeouts(i32 %13, i32 0, %struct.timeval** %14, %struct.timeval* %15, i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @cc_entex, align 4
  %21 = call i32 @adns__consistency(i32 %19, i32 0, i32 %20)
  ret void
}

declare dso_local i32 @adns__consistency(i32, i32, i32) #1

declare dso_local i32 @adns__timeouts(i32, i32, %struct.timeval**, %struct.timeval*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
